Implemented API request to get and select searched movies (1 and 2)

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,22 @@
   text-align: center;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+}
+
+section img {
+  height: 240px;
+  margin: 10px;
+  width: 135px;
+}
+
 .movie-list {
   display: flex;
   flex-wrap: wrap;
