--- a/src/App.css
+++ b/src/App.css
@@ -21,17 +21,17 @@ section img {
   width: 135px;
 }
 
-.movie-list {
+.movie-list, .star-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.movie-poster {
+.movie-poster, .star-poster {
   margin: 10px;
 }
 
-.movie-poster img {
+.movie-poster img, .star-poster img {
   height: 480px;
   width: 270px;
 }
