Actors are being rendered

--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,16 @@ section img {
   margin: 10px;
 }
 
-.movie-poster img, .star-poster img {
+.movie-poster img {
   height: 480px;
-  width: 270px;
+}
+
+.game img {
+  height: 240px;
+}
+
+.star-poster img {
+  height: 180px;
 }
 
 
