--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,28 @@
 * {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
   text-align: center;
 }
 
-body {
+header {
+  align-items: center;
+  background-color: black;
+  color: white;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  padding: 20px;
 }
 
-section {
-  display: flex;
-  justify-content: center;
+header p {
+  font-weight: 600;
 }
 
-section img {
-  height: 240px;
+.movie-img-home {
+  height: 280px;
   margin: 10px;
-  width: 135px;
 }
 
 .movie-list, .star-list {
@@ -27,20 +31,13 @@ section img {
   justify-content: center;
 }
 
-.movie-poster, .star-poster {
-  margin: 10px;
-}
-
-.movie-poster img {
+.movie-hero, .star-hero {
   height: 480px;
 }
 
-.game img {
+.star-poster img, .movie-poster img {
   height: 240px;
 }
 
-.star-poster img {
-  height: 180px;
-}
 
 
