Code consistency and Not Found page

--- a/src/App.css
+++ b/src/App.css
@@ -191,3 +191,9 @@ footer a:hover {
   color: var(--accent);
   text-decoration: none;
 }
+
+.not-found {
+  color: var(--secondary);
+  margin: 30% auto;
+  text-align: center;
+}
